<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/enteraword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/userInput"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1"
                android:layout_gravity="center_horizontal"
                android:hint="@string/a"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guess_a_word"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/reslayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin = "10dp"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/resultimg"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_heart" />

                <TextView
                    android:id="@+id/resulttext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:text="@string/result"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
