<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:LuckyWheel="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="wordToGuess"
            type="String" />
        <variable
            name="hintToBeShown"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fortune.fragment.Game">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lifeRecyclerview"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="6dp"
            LuckyWheel:layout_constraintStart_toStartOf="parent"
            LuckyWheel:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            LuckyWheel:layout_constraintEnd_toEndOf="parent"
            LuckyWheel:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="6dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/coins"/>
                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:padding="6dp"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            LuckyWheel:layout_constraintBottom_toBottomOf="parent"
            LuckyWheel:layout_constraintEnd_toEndOf="parent"
            LuckyWheel:layout_constraintStart_toStartOf="parent"
            LuckyWheel:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"

                LuckyWheel:layout_constraintBottom_toBottomOf="parent"
                LuckyWheel:layout_constraintEnd_toEndOf="parent"
                LuckyWheel:layout_constraintStart_toStartOf="parent"
                LuckyWheel:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:text="@{hintToBeShown}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"/>


                <com.bluehomestudio.luckywheel.LuckyWheel
                    android:id="@+id/wheel"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    LuckyWheel:arrow_image="@drawable/ic_direction_bottom"
                    LuckyWheel:background_color="@color/primary" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/wordRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    LuckyWheel:layout_constraintBottom_toBottomOf="parent"
                    LuckyWheel:layout_constraintEnd_toEndOf="parent"
                    LuckyWheel:layout_constraintStart_toStartOf="parent"
                    LuckyWheel:layout_constraintTop_toBottomOf="@+id/wheel" />


                <EditText
                    android:id="@+id/guessword"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext"
                    android:hint="@string/enter_a_letter_example_a"
                    android:maxLength="1"
                    android:padding="4dp"
                    android:gravity="center"
                    android:visibility="gone"
                    />
                <LinearLayout
                    android:id="@+id/showbtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:padding="2dp">
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:text="@string/cancel"
                        android:layout_margin="4dp"
                        />
                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:text="@string/submit"
                        android:layout_margin="4dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/mainlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/vowel"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/ic_vowl" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vowel"
                            android:textColor="@color/primary"
                            android:gravity="center"
                            android:layout_gravity="center_horizontal"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/spin"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="4dp"
                            android:src="@drawable/ic_spin"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spin"
                            android:textColor="@color/primary"
                            android:gravity="center"
                            android:layout_gravity="center_horizontal"/>
                    </LinearLayout>
                    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/guess"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/ic_solve" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/solve"
                        android:textColor="@color/primary"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>






                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/spinwheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spin"
            android:textAlignment="center"
            android:layout_marginBottom="14dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            LuckyWheel:layout_constraintBottom_toBottomOf="parent"
            LuckyWheel:layout_constraintEnd_toEndOf="parent"
            LuckyWheel:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
